# SIREN

./: rebuild.sh
geant4_shower/: CMakeLists.txt  sim.cc
geant4_shower/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
geant4_shower/macros/: batch_scan.sh  build_shower_model.sh
geant4_shower/python_scripts/: analyze_g4_profiles.py  diagnostics.py  shower_gamma_model.py
geant4_shower/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
projects/interactions/private/: DISFromSpline.cxx
projects/interactions/private/pybindings/: DISFromSpline.h
projects/interactions/public/SIREN/interactions/: DISFromSpline.h
python/: _util.py
resources/analysis/: analyze_dis_secondaries.py  analyze_pythia_subcascades.py  check_subshowers.py  generate_pythia_dis.py  plot_subshowers.py
resources/examples/example1/: DIS_IceCube.py  plot_subshowers.py
